log/statview/25112024_174005_Statview_pmt_22012_1_1.out
nohup: ignoring input
  File "/lustre/hpc/icecube/cyan/factory/DOMification/StatViewerPMT.py", line 30
    logging.info(f"Figures saved to {self.output_pdf}_raw.pdf")s
                                                               ^
SyntaxError: invalid syntax
